Bug #316245 --> Secure news server icon does not display padlock

Patch by mkmelin+bugzilla@cc.hut.fi

r=mscott
sr=bienvenu